src/components/profile-view/profile-view.scss
.profile {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.user-info-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.user-info-username {
  color: #4A2E9B !important;
  font-family: "Iceberg", cursive !important;
}

.info-display-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-form label {
  display: flex;
  flex-direction: column;
}

.profile-form label input {
  padding-block: 6px !important;
  padding-inline: 12px !important;
  width: 675px !important;
  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25) !important;
  background: linear-gradient(#fff, #fff) padding-box,
    linear-gradient(45deg, #4A2E9B, #CE2476) border-box !important;
  border: 1px solid transparent !important;
  border-radius: 2px !important;
  margin-bottom: 15px;
}

.favorite-movies-divider {
  width: 90% !important;
}

.favorite-movies-list-container {
  width: 90vw !important;
  max-width: 1400px;
}

